# oxygine-admob

./: .gitignore  .hgignore  Android.mk  CMakeLists.txt  README.md
android/: AndroidManifest.xml  build.gradle  build.xml  settings.gradle
android/src/org/oxygine/admob/: AdmobAdapter.java
example/HelloWorldAdmob/data/: ident.free
example/HelloWorldAdmob/data/demo/: eng.txt
example/HelloWorldAdmob/proj.android/: AndroidManifest.xml  build.xml  install.bat  install.sh
example/HelloWorldAdmob/proj.android/res/values/: strings.xml
example/HelloWorldAdmob/proj.android/src/org/oxygine/HelloWorldFacebook/: MainActivity.java
example/HelloWorldAdmob/proj.cmake/: CMakeLists.txt  run.sh
example/HelloWorldAdmob/proj.emscripten/: CMakeLists.txt
example/HelloWorldAdmob/proj.ios/HelloWorldFacebook/: HelloWorldFacebook_ios-Info.plist
example/HelloWorldAdmob/proj.ios/HelloWorldFacebook_ios.xcodeproj/: project.pbxproj
example/HelloWorldAdmob/proj.ios/HelloWorldFacebook_ios.xcodeproj/project.xcworkspace/xcshareddata/: HelloWorldFacebook_ios.xcscmblueprint
example/HelloWorldAdmob/proj.macosx/HelloWorldFacebook_macosx.xcodeproj/: project.pbxproj
example/HelloWorldAdmob/proj.win32/: HelloWorldFacebook.sln  HelloWorldFacebook.vcxproj
example/HelloWorldAdmob/src/: example.cpp
example/HelloWorldAdmob/src/ios/: AppDelegate.h  AppDelegate.mm
src/: admob.cpp  admob.h
src/android/: AndroidAdmob.cpp  AndroidAdmob.h
src/ios/: iosAdmob.h  iosAdmob.mm
src/sim/: AdmobSimulator.cpp  AdmobSimulator.h
